# torch-types

./: pyproject.toml
tests/: test_tfrecord.py
torch_types/: __init__.py  base.py  fields.py  instance.py
torch_types/io/: __init__.py  base.py  tfrecord.py
