[tool.poetry]
name = "torch-types"
version = "0.1.0"
description = ""
authors = ["kenny <kkihara1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tfrecord = "^1.14.1"
torch = "^1.10.2"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
mypy = "^0.931"
mypy-extensions = "^0.4.3"
ipyvolume = "^0.5.2"
pylint = "^2.12.2"
jedi = "^0.18.1"
black = "^22.1.0"
ipdb = "^0.13.9"
ipython = "^8.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
