[tool.poetry]
name = "torch-types"
version = "0.1.0"
description = ""
authors = ["kenny <kkihara1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

numpy = "^1.22.2"
tfrecord = "^1.14.1"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
ipdb = "^0.13.9"
ipython = "^8.0.1"
ipyvolume = "^0.5.2"
isort = "^5.10.1"
jedi = "^0.18.1"
mypy = "^0.931"
mypy-extensions = "^0.4.3"
neovim = "^0.3.1"
pylint = "^2.12.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
    \.git
  | \.mypy_cache
)
'''
line-length = 100
target_version = ['py38']
